Version 3.1.x:

* Support joystick_port_[port]_[gamepadinput] input mapping.
* Read [guid].fs-uae-controller controller configs.
* Fixed uaenative_library option.
* Added lots of game controller configs.
* Set SDL_HINT_MAC_BACKGROUND_APP in device helper.
* Allow screensaver with SDL_VIDEO_ALLOW_SCREENSAVER=1.
* Fix device helper for xinput devices with recent SDL2 versions.
* Support for multiple mice disabled by default on macOS due to security
  warning. Use option multiple_mice = 1 to enable.
* Disable expect_version option (no longer synchronized with launcher).
* Added support for more physical keys (when using rawinput).
* Compilation fixes for Apple M1 hardware.
* Netplay desync fixes related to file system (directory hard drives).
* Better virtual memory reservation algorithm.
* Option to automatically pause on menu screen [mrsilver76].
* Use RTLD_DEEPBIND with dlopen on Linux when loading plugins.
* Changes to how plugins are looked up.
* Ide patch.
* SCP floppy image doesn't wrap to revolution #0 cleanly [keirf].
* Fixed crash in nname_to_aname [PowderedToastMan].

Version 3.0.5:

* Packaging change to satisfy Apple's changed notarization process (sigh).

Version 3.0.4:

* Fix compilation of sana2.cpp with GCC 10.
* Fix OpenGL shaders with multiple passes on macOS.
* Include compilation fix for "unknown" CPUs architectures.
* Updated the GLAD OpenGL loader.

Version 3.0.1:

* Fix video scaling when restoring from fullscreen on Windows.

Version 3.0.0:

* Show error during configure if OpenAL is not found.
* More controller configs.
* Imported updated translations from crowdin.com.

Version 2.9.12dev:

* Added controller config for DualShock 4 v2.
* Change default for bezel option to 0 (off).

Version 2.9.11dev:

* Linux: Automatically uses (Feral Interactive) GameMode daemon if available.
* New option game_mode = 0 to disable above mentioned feature.
* Linux: Warn if running with a CPU governor other than performance.